# LiveCodeBench

./: .gitignore  README.md  input.txt  mishka.txt  output.txt  pyproject.toml  temp
lcb_runner/: lm_styles.py
lcb_runner/evaluation/: compute_code_generation_metrics.py  testing_util.py
lcb_runner/prompts/: code_generation.py
lcb_runner/runner/: main.py  runner_utils.py
myEvaluate/: codellama.sh  createInference.sh  llama31.sh  mistral.sh  myEvaluate.sh  rl_evaluate.sh
wyett_helpers/: setup.sh
